--- a/Login/style.css
+++ b/Login/style.css
@@ -12,7 +12,7 @@
 
 body {
     line-height: 1;
-    background-image: url("./img/background.png");
+    background-image: url("../img/background.png");
 }
 
 .opcaoCadastrarAgora {
